--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dist": "webpack --progress --colors --config build/dist.config.js",
     "watch-dist": "webpack --watch --progress --colors --config build/dist.config.js",
     "dist.min": "webpack --progress --colors -p --config build/dist.min.config.js",
-    "build": "NODE_ENV=production npm run lib && npm run dist && npm run dist.min && npm run build-style && npm run build-style-dist && npm run build-style-dist-min",
-    "dev": "NODE_ENV=production PORT=9090 webpack-dev-server --progress --colors --config  build/dev.config.js",
-    "hot": "NODE_ENV=production HOT=true PORT=9090 webpack-dev-server --progress --colors --config build/dev.config.js"
+    "build": "set NODE_ENV=production && npm run lib && npm run dist && npm run dist.min && npm run build-style && npm run build-style-dist && npm run build-style-dist-min",
+    "dev": "set NODE_ENV=production PORT=9090&& webpack-dev-server --progress --colors --config  build/dev.config.js",
+    "hot": "set NODE_ENV=production HOT=true PORT=9090&& webpack-dev-server --progress --colors --config build/dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -76,6 +76,7 @@
     "react-virtual-scroller": "^1.1.2",
     "region": "^2.1.2",
     "region-align": "^2.1.2",
+    "sprintf-js": "^1.0.3",
     "ustring": "^1.4.1",
     "whatwg-fetch": "^0.7.0"
   },
